src/test/deca/context/valid/override-method-return-subtype.deca
// Description:
//    override de méthode
//
// Resultats:
//
//
// Historique:
//    cree le 16/01/2023

class A {
    A get(int a){}
}

class B extends A {
    B get(int b){}
}
