src/test/deca/context/invalid/method-call-not-on-class.deca
// Description:
//    Appel de méthode sur une variable qui n'est pas de type class 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 13: The object of the method call is not of type class (rule 3.71)
//
// Historique:
//    cree le 16/01/2023

{
    int a;
    a.get();
}